--- a/EPAM_test/EPAM_test/EPAM_test.csproj
+++ b/EPAM_test/EPAM_test/EPAM_test.csproj
@@ -72,6 +72,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseTest.cs" />
     <Compile Include="MainPageObject.cs" />
     <Compile Include="Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
